--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="data:," />
-    <title>styled-react-ts-vite</title>
+
+    <!-- Icon and themes -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1c2335">
+    <meta name="apple-mobile-web-app-title" content="Innonymous">
+    <meta name="application-name" content="Innonymous">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#1c2335">
+
+    <title>Innonymous</title>
   </head>
 
   <body>
